added screenshots in assets folder

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */
+/* version Initial unresponsive, I'll make it responsive later, ps: pransu */
 
 :root {
     --color-primary: #5ec576;
